Fixed getlast and added simpler constructor for Henry